--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -21,16 +21,10 @@ app_version=
 #=====================================================#
 
 #=============== Environment configuration ===========#
-#env=DEMO
-DEMO.base=https://www.gsmarena.com
-DEMO.api_url=https://jsonplaceholder.typicode.com
-STAG.api_url=
-DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
-
 env=QA
 QA.base_url=https://openweathermap.org/
 QA.api_url=http://api.openweathermap.org
-QA.dummy_api_url=p
+QA.dummy_api_url=https://jsonplaceholder.typicode.com
 QA.api_token=ca2c53f3922cdc2af1738f5356da442d
 #=====================================================#
 
