page objects for mobile test added

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -7,7 +7,7 @@
 url=https://openweathermap.org/
 capabilities.browserName=chrome
 capabilities.browserVersion=NULL
-selenium_url=http://localhost:4444/wd/hub   
+#selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -49,13 +49,13 @@ init_retry_interval=1
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-#selenium_url=http://localhost:4723/wd/hub
-#capabilities.automationName=uiautomator2
+selenium_url=http://localhost:4723/wd/hub
+capabilities.automationName=uiautomator2
 #capabilities.deviceName=<phone_name>
 #capabilities.udid=<phone_udid>
-#capabilities.deviceType=phone
-#capabilities.platformName=ANDROID
-#capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
+capabilities.deviceType=phone
+capabilities.platformName=ANDROID
+capabilities.app=src/main/resources/OpenWeather_1.1.3_Apkpure (2).apk
 #=====================================================#
 
 #uncomment and change deviceName and platformVersion for iOS test
