mobile test and page objects added

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -5,7 +5,7 @@
 #=================== Global configuration ============#
 # Go to the directory where the selenium server is located and execute this command: java -jar selenium-server-<version>.jar standalone
 url=https://openweathermap.org/
-capabilities.browserName=chrome
+#capabilities.browserName=chrome
 capabilities.browserVersion=NULL
 #selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
@@ -49,13 +49,14 @@ init_retry_interval=1
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-selenium_url=http://localhost:4723/wd/hub
+selenium_url=http://localhost:4723
 capabilities.automationName=uiautomator2
 #capabilities.deviceName=<phone_name>
 #capabilities.udid=<phone_udid>
 capabilities.deviceType=phone
 capabilities.platformName=ANDROID
-capabilities.app=src/main/resources/OpenWeather_1.1.3_Apkpure (2).apk
+capabilities.app=https://d.apkpure.com/b/APK/uk.co.openweather?versionCode=53&nc=arm64-v8a%2Carmeabi-v7a%2Cx86%2Cx86_64&sv=21
+#capabilities.app=C:/Users/gianm/Downloads/OpenWeather_1.1.3_Apkpure (2).apk
 #=====================================================#
 
 #uncomment and change deviceName and platformVersion for iOS test
