apk file downloadable from github and testSearchBox added

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -55,7 +55,7 @@ capabilities.automationName=uiautomator2
 #capabilities.udid=<phone_udid>
 capabilities.deviceType=phone
 capabilities.platformName=ANDROID
-capabilities.app=https://d.apkpure.com/b/APK/uk.co.openweather?versionCode=53&nc=arm64-v8a%2Carmeabi-v7a%2Cx86%2Cx86_64&sv=21
+capabilities.app=https://GKARLOZ.github.io/OpenWeather-Testing-Framework/src/main/resources/OpenWeather_1.1.3_Apkpure.apk
 #capabilities.app=C:/Users/gianm/Downloads/OpenWeather_1.1.3_Apkpure (2).apk
 #=====================================================#
 
