positive test for Singin added

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -5,9 +5,9 @@
 #=================== Global configuration ============#
 # Go to the directory where the selenium server is located and execute this command: java -jar selenium-server-<version>.jar standalone
 url=https://openweathermap.org/
-#capabilities.browserName=chrome
+capabilities.browserName=chrome
 capabilities.browserVersion=NULL
-#selenium_url=http://localhost:4444/wd/hub
+selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -49,13 +49,13 @@ init_retry_interval=1
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-selenium_url=http://localhost:4723
-capabilities.automationName=uiautomator2
+#selenium_url=http://localhost:4723
+#capabilities.automationName=uiautomator2
 #capabilities.deviceName=<phone_name>
 #capabilities.udid=<phone_udid>
-capabilities.deviceType=phone
-capabilities.platformName=ANDROID
-capabilities.app=https://GKARLOZ.github.io/OpenWeather-Testing-Framework/src/main/resources/OpenWeather_1.1.3_Apkpure.apk
+#capabilities.deviceType=phone
+#capabilities.platformName=ANDROID
+#capabilities.app=https://GKARLOZ.github.io/OpenWeather-Testing-Framework/src/main/resources/OpenWeather_1.1.3_Apkpure.apk
 #capabilities.app=C:/Users/gianm/Downloads/OpenWeather_1.1.3_Apkpure (2).apk
 #=====================================================#
 
