MultiEnvironment Testing Setup finished. Docker and bat files added.

--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,9 @@
 <!--					<argLine>-javaagent:${project.build.directory}/agent/zebrunner-agent.jar</argLine>-->
 					<useSystemClassLoader>false</useSystemClassLoader>
 					<suiteXmlFiles>
-						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>
+						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/WebTestParallel.xml</suiteXmlFile>
+<!--						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>-->
+
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
