--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -80,6 +80,12 @@ max_screen_history=10
 
 email_list=NULL
 suite_name=NULL
+
+#
+#REPORTING_ENABLED=false
+#REPORTING_SERVER_HOSTNAME=https://nocompanyrightnow.zebrunner.com
+#REPORTING_SERVER_ACCESS_TOKEN=YUKwJAoBWSkhgJtOQSHzxcoO3ms08Yw2oLjOKIOT3p4Us7xxA6
+
 #=====================================================#
 
 #=============== MyBatis configuration ===============#
