--- a/src/main/resources/agent.properties
+++ b/src/main/resources/agent.properties
@@ -1,5 +1,14 @@
-reporting.enabled=false
-reporting.server.hostname=
-reporting.server.access-token=
+reporting.enabled=true
+reporting.server.hostname=https://nocompanyrightnow.zebrunner.com
+reporting.server.access-token=YUKwJAoBWSkhgJtOQSHzxcoO3ms08Yw2oLjOKIOT3p4Us7xxA6
 reporting.project-key=DEF
-reporting.run.environment=
+reporting.run.environment=Producction
+
+reporting.run.display-name=Nightly Regression Suite
+reporting.run.build=2.5.3.96-SNAPSHOT
+reporting.run.retry-known-issues=false
+reporting.run.treat-skips-as-failures=false
+
+reporting.tcm.test-rail.suite-id=1
+reporting.tcm.test-rail.run-id=1
+reporting.tcm.zebrunner.test-run-id=1
