Zebrunner reporting integration added.Fixed agent.properties file.

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -5,7 +5,7 @@
 #=================== Global configuration ============#
 # Go to the directory where the selenium server is located and execute this command: java -jar selenium-server-<version>.jar standalone
 url=https://openweathermap.org/
-capabilities.browserName=chrome
+#capabilities.browserName=chrome
 capabilities.browserVersion=NULL
 selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
