--- a/src/main/resources/agent.properties
+++ b/src/main/resources/agent.properties
@@ -1,14 +1,14 @@
 reporting.enabled=true
 reporting.server.hostname=https://nocompanyrightnow.zebrunner.com
 reporting.server.access-token=YUKwJAoBWSkhgJtOQSHzxcoO3ms08Yw2oLjOKIOT3p4Us7xxA6
-reporting.project-key=DEF
-reporting.run.environment=Producction
+reporting.project-key=OPENW
+reporting.run.environment=QA
 
 reporting.run.display-name=Nightly Regression Suite
-reporting.run.build=2.5.3.96-SNAPSHOT
+#reporting.run.build=2.5.3.96-SNAPSHOT
 reporting.run.retry-known-issues=false
 reporting.run.treat-skips-as-failures=false
 
-reporting.tcm.test-rail.suite-id=1
-reporting.tcm.test-rail.run-id=1
-reporting.tcm.zebrunner.test-run-id=1
+#NOTE
+#this file won't work  using the chrome browser IF you add the agent-testng dependency.
+#No additional dependencies is needed to integrate zebrunner reporting.
