--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,8 @@
 					<!--					<argLine>-javaagent:${project.build.directory}/agent/zebrunner-agent.jar</argLine>-->
 					<useSystemClassLoader>false</useSystemClassLoader>
 					<suiteXmlFiles>
-						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/MultiBrowserTest.xml</suiteXmlFile>
+						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/BasicWebTest.xml</suiteXmlFile>
+<!--						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/MultiBrowserTest.xml</suiteXmlFile>-->
 						<!--						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>-->
 
 					</suiteXmlFiles>
