Zebrunner reporting edited.

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,7 +3,7 @@
 #=====================================================#
 
 #=================== Global configuration ============#
-# Go to the directory where the selenium server is located and execute this command: java -jar selenium-server-<version>.jar standalone
+# Go to the directory where the selenium server is located and execute this command: java -jar selenium-server-4.10.0.jar standalone
 url=https://openweathermap.org/
 capabilities.browserName=chrome
 capabilities.browserVersion=NULL
