--- a/src/main/resources/agent.properties
+++ b/src/main/resources/agent.properties
@@ -4,7 +4,7 @@ reporting.server.access-token={crypt:vcs74rA5g6SnUHcocU25uiM2d9H/MjVxkQpAVjP/KbG
 reporting.project-key=OPENW
 reporting.run.environment=QA
 
-reporting.run.display-name= #1 Test Suite
+reporting.run.display-name= Open Weather Tests
 #reporting.run.build=2.5.3.96-SNAPSHOT
 reporting.run.retry-known-issues=false
 reporting.run.treat-skips-as-failures=false
